fixed resolution of logo on mobile

--- a/src/styles/navMen.scss
+++ b/src/styles/navMen.scss
@@ -9,10 +9,12 @@ $thisHeight: 2vw;
     cursor: pointer;
     transform: translateX($thisHeight * .3); //to offset padding
     @include tablet{
-        transform: scale(2);
+        height: $thisHeight * 2;
+        width: $thisHeight * 2;
     }
     @include mobile{
-        transform: scale(3);
+        height: $thisHeight * 3;
+        width: $thisHeight * 3;
         margin-right: 1.6vw;
     }
     & > .container{
